crates/strider/tests/snapshots/v2__arm_be__memory__array_sum.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v4" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "3" -> "v2" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v4" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "9" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "7" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "15" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "21" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "25" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "27" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "31" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "33" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "32" -> "33" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "7" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "42" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "32" -> "42" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "44" -> "42" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "40" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "37" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "37" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "36" -> "37" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "45" -> "37" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "36" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "47" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "47" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "48" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "49" -> "48" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "50" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "32" -> "50" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
