crates/strider/tests/snapshots/v2__arm_be__memory__struct_field_store.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "7" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "3" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "10" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" -> "7" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "11" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "12" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v13" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v13" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "3" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "12" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "14" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v15" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v15" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "14" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "16" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v17" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v17" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
